0.2.5
Fixed single instance bug in ubuntu.
If there is a text selection 'Replace All' now only affects the selected text instead of the whole document.
If there is a text selection 'Find' now starts from the start of the selection instead of the end.
Removed some deprecated function calls.
Fixed bug with opening large html files with odd characters in the name.
Can now group all plugins under one menu.
Fixed occasional endless loop in replace all.
Improved speed of 'Replace All'.
Cleaned prefs code.
Fixed segfault on docviewer when a very large number of possible matches are found.
Added colour button to prefs for setting bookmark highlight colour.
Added max find/replace history terms saved to prefs.
Fixed ubuntu/gnome bugs AGAIN! I wish they would stop breaking stuff for no good reason!
Added help option to command line.
Added long command line options.
Fixed opening files with non-ascii characters in name.
Added linking to Xlib.
Switched to gapplication from deprecated libunique.
Now saves last 10 find/replace terms and reloads at startup.
Fixed segfault when trying to open file with non ascii characters in the name with a kkedit instance already running.
Changed Find/Replace Entry/Dropdowns to Combo box with entry.

0.2.4
Re-done Find/Replace layout.
Dimmed 'Go Back' button and menu item if can't go back.
Fixed 'Go Back' bug
Go to definition now searches current file first then from the leftmost tab.
Added 'Add to Custom Word List" to popup when text is selected.
Added 'Check For Updates' option to prefs.
Added support for custom word completions.
Redone prefs dialog.
Added function/variable definition to 'Detail' on completion popup.
Added variable names to auto complete.
Added function names to auto complete.
Added auto-complete popup key to keybindings dialog.
Started to add auto completion.
Changed key bindings file and format.
Fixed bug where size of doc viewer being stored wrong if it hasn't been shown.