@@ -8,11 +8,9 @@
 #define _GUIS_
 
 enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,AUTOBM,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,UPDATECHECK,BEKIND,GLOBALPLUGMENU,MAXPREFSWIDGETS};
-enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MAXPREFSINTWIDGETS};
-enum {THEMNAME=0,MAXPREFSSTRINGS};
+enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXBMWIDTH,MAXPREFSINTWIDGETS};
 
 extern	GtkWidget*	prefsWidgets[MAXPREFSWIDGETS];
-extern	GtkWidget*	prefsWidgetsStrings[MAXPREFSSTRINGS];
 extern	GtkObject*	prefsIntWidgets[MAXPREFSINTWIDGETS];
 
 enum {STOCKMENU=0,IMAGEMENU,PIXMAPMENU,NORMALMENU};
